--- a/style.css
+++ b/style.css
@@ -84,3 +84,113 @@ h6 {
 body {
   font-family: var(--ff-base);
 }
+
+/* 
+  Download links
+*/
+
+.download-link {
+  width: 100%;
+  background-color: hsl(var(--clr-primary-cyan));
+  text-decoration: none;
+  color: hsl(var(--clr-neutral-100));
+  border-radius: 5rem;
+  padding: 0.7rem;
+  font-size: 1.125rem;
+  font-weight: var(--fw-semi-bold);
+  cursor: pointer;
+}
+
+.download-link--mac {
+  background-color: hsl(var(--clr-primary-blue));
+}
+
+.download-link:hover {
+  opacity: 0.7;
+}
+
+/* 
+  Header
+*/
+
+header {
+  background-image: url(images/bg-header-mobile.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: grid;
+  place-items: center;
+  gap: 1rem;
+  padding: 2rem;
+  text-align: center;
+}
+
+header > img {
+  max-width: 7rem;
+  margin: 4rem 0 2rem 0;
+}
+
+header > h2 {
+  font-size: 1.9rem;
+  color: hsl(var(--clr-neutral-300));
+}
+
+header > p {
+  font-size: 1rem;
+  color: hsl(var(--clr-neutral-200));
+  margin-bottom: 2rem;
+}
+
+/* 
+  First section
+*/
+
+.keep-track {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.keep-track > h2 {
+  font-size: 1.9rem;
+  color: hsl(var(--clr-neutral-300));
+}
+
+.keep-track > p {
+  font-size: 1rem;
+  color: hsl(var(--clr-neutral-200));
+  margin-bottom: 2rem;
+}
+
+.keep-track > img {
+  margin-bottom: 2rem;
+}
+
+.keep-track > h3 {
+  font-size: 1.6rem;
+  color: hsl(var(--clr-neutral-300));
+}
+
+/* 
+  Second section
+*/
+
+.access-anywhere {
+  display: grid;
+  place-items: center;
+  text-align: center;
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.access-anywhere > h2 {
+  font-size: 1.9rem;
+  color: hsl(var(--clr-neutral-300));
+}
+
+.access-anywhere > p {
+  font-size: 1rem;
+  color: hsl(var(--clr-neutral-200));
+  margin-bottom: 2rem;
+}
