--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
   text-decoration: none;
   color: hsl(var(--clr-neutral-100));
   border-radius: 5rem;
-  padding: 0.7rem;
+  padding: 0.7rem 2rem;
   font-size: 1.125rem;
   font-weight: var(--fw-semi-bold);
   cursor: pointer;
@@ -145,6 +145,15 @@ header > img {
   margin: 4rem 0 2rem 0;
 }
 
+header > div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
 /* 
   First section
 */
@@ -155,6 +164,11 @@ header > img {
   text-align: center;
   gap: 1rem;
   padding: 2rem;
+}
+
+.keep-track > div {
+  display: grid;
+  gap: 1rem;
 }
 
 .keep-track > img {
@@ -185,8 +199,13 @@ header > img {
   gap: 1rem;
 }
 
-.supercharge > img {
+.supercharge > div > img {
   margin: 1rem 0;
+}
+
+.supercharge > div {
+  display: grid;
+  place-items: center;
 }
 
 /* 
@@ -213,6 +232,15 @@ header > img {
   padding: 2rem;
   gap: 1rem;
   margin-bottom: 2rem;
+}
+
+.download > div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 /* 
@@ -252,4 +280,69 @@ footer > a:hover {
 .social-media > a > img:hover {
   filter: brightness(0) saturate(100%) invert(58%) sepia(67%) saturate(426%)
     hue-rotate(122deg) brightness(91%) contrast(98%);
+}
+
+@media (min-width: 800px) {
+  .download-link {
+    width: fit-content;
+  }
+
+  header > div {
+    flex-direction: row;
+  }
+
+  .keep-track {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .keep-track > div {
+    grid-column: 1 / 3;
+    padding: 0 5rem;
+  }
+
+  .keep-track > p,
+  .keep-track > h3 {
+    width: 100%;
+    text-align: left;
+  }
+
+  .keep-track > img {
+    grid-row: 2 / 9;
+    margin-left: -7rem;
+    padding-right: -7rem;
+  }
+
+  .supercharge {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .supercharge > h2 {
+    grid-column: 1 / 4;
+  }
+
+  .supercharge > p {
+    grid-column: 1 / 4;
+  }
+
+  .logos {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  .download > div {
+    flex-direction: row;
+  }
+
+  footer {
+    grid-template-columns: repeat(4, 1fr) 3fr;
+    row-gap: 0px;
+  }
+
+  footer > img {
+    grid-row: 1 / 3;
+  }
+
+  footer > div {
+    grid-column: 5 / 6;
+    grid-row: 1 / 3;
+  }
 }
