--- a/style.css
+++ b/style.css
@@ -287,6 +287,10 @@ footer > a:hover {
     width: fit-content;
   }
 
+  header {
+    background-image: url(images/bg-header-desktop.png);
+  }
+
   header > div {
     flex-direction: row;
   }
